--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="js/SleepGraph.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/echarts@4.4.0/dist/echarts.min.js"></script>
-        <script type="text/javascript" src="js/jso.js"></script>
+        <script type="text/javascript" src="js/jso-4.1.0/JSO.js"></script>
 </head>
 <body>
     <div type="text/javascript" id="sleepchart" >Coucou</div>
