work in progress

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div type="text/javascript" id="sleepchart" >Coucou</div>
-    <script>displayChart()</script>
+    <a href="#" onclick="auth()">Show me the graph</a>
 </body>
 </html>
 
