--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/echarts@4.4.0/dist/echarts.min.js"></script>
         <script type="text/javascript" src="js/jso-4.1.0/JSO.js"></script>
+        <script type="text/javascript" src="js/js.cookie.js"></script>
+        
 </head>
 <body>
     <div type="text/javascript" id="sleepchart" >Coucou</div>
