--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>        
         <script src="https://cdn.jsdelivr.net/npm/echarts@4.4.0/dist/echarts.min.js"></script>
-        <script type="text/javascript" src="js/jso-4.1.0/jso.js"></script>
+        <script type="text/javascript" src="js/jso.js"></script>
     </head>
 <body>
     TEST:
