work in progress

--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
         Withings_client.callback();
         console.log('ok2');
 
-    client.getToken(opts)
+    Withings_client.getToken()
         .then((token) => {
             console.log("I got the token: ", token)
         })
