--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
                     request: 1
         });
     console.log('ok');
-    Withings_client.callback();
-    console.log('ok2');    
+    //Withings_client.callback();
+    //console.log('ok2');    
     var token = Withings_client.getToken();
     if (token !== null) {
         console.log("I got the token: ", token)
