--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,8 @@
     console.log('ok');
     //Withings_client.callback();
     //console.log('ok2');    
-    var token = Withings_client.getToken();
+    //var token = Withings_client.getToken();
+    var token = Withings_client.checkToken();
     if (token !== null) {
         console.log("I got the token: ", token)
     } else {
