work in progress

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="js/jso.js"></script>
     </head>
 <body>
-    TEST:
+    TEST1:
     <script>
     var Withings_client = new jso.JSO({
                     client_id: '1acd5f6a33235e47237e2b52e7aaada535e37b12526595b77d94ef15dcefc153',
