--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
                     client_secret: '16b8bd569943c87d8bc2776df8dedafe56df54db71abde740f55e6a8da60a598',
                     token: 'https://account.withings.com/oauth2/token',
                     authorization: 'https://account.withings.com/oauth2_user/authorize2',
-                    redirect_uri: window.location.href,
+                    redirect_uri: 'https://jthevenin.github.io/SleepSensor/',
                     scopes: { request: ['user.activity'], require: ['user.activity'] },
                     debug: true,
                     request: 1
