--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
         var client_id = 'a7036bab0c2585592d4b7410bb9e4b76fc316cfca05f7ed2709aeefbbbe3264f';
         var client_secret = '1f992430981aa97da2dea42c837e1f347bd5a4ca0a8b4fca8a3fe4e86e6a0479';
         var scope = ['https://wbsapi.withings.net/v2/user.activity'];
-        var redirect_uri = 'https://jthevenin.github.io/SleepSensor/';
+        var redirect_uri = 'https://jthevenin.github.io/SleepSensor/index2.html';
 
         var Withings_client = new jso.JSO({            
             client_id: client_id,
