--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,9 @@
     } else {
         //Withings_client.callback();
         console.log('Getting token!' + Withings_client.getToken());
+        
     }
+    debugger;
     </script>
 
 
