--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
     if (token !== null) {
             console.log("I got the token: ", token)
     } else {
-        //Withings_client.callback();
+        Withings_client.callback();
         console.log('Getting token!' + Withings_client.getToken());
         
     }
