--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
     if (token !== null) {
             console.log("I got the token: ", token)
     } else {
-        
+        console.log(authorize_code);
         console.log('Getting token!' + Withings_client.getToken());
         
     }
