--- a/index2.html
+++ b/index2.html
@@ -43,10 +43,10 @@
     if (token !== null) {
             console.log("I got the token: ", token)
     } else {
-        console.log(authorize_code);
+        //console.log(authorize_code);
         //console.log('Getting token!' + Withings_client.getToken();
-        Withings_client.getToken().then((token)=>{
-            console.log("I got the token: ", token)
+        Withings_client.getToken().then((access_token)=>{
+            console.log("I got the token: ", access_token)
         });
         
     }
