--- a/index2.html
+++ b/index2.html
@@ -45,10 +45,8 @@
     } else {
         //console.log(authorize_code);
         //console.log('Getting token!' + Withings_client.getToken();
-        Withings_client.getToken({
-                                    grant_type : "authorization_code"
-                                    }).then((access_token)=>{
-            console.log("I got the token: ", access_token)
+        Withings_client.getToken().then((token)=>{
+            console.log("I got the token: ", token)
         });
         
     }
